job: config owner_repo_test job

--- a/.github/workflows/github_repo_branches.yml
+++ b/.github/workflows/github_repo_branches.yml
@@ -4,8 +4,8 @@ on:
   workflow_dispatch:
 env:
     POSTMAN_API_URL: ${{ secrets.POSTMAN_API_URL }}
-    POSTMAN_API_KEY: ${{ secrets.POSTMAN_GITHUB_API_ANH }}
-    POSTMAN_COLLECTION_UID: ''
+    POSTMAN_API_KEY: ${{ secrets.POSTMAN_GITHUB_API_KEY_ANH }}
+    POSTMAN_COLLECTION_UID: ${{ secrets.POSTMAN_GITHUB_BRANCHES_COLLECTION_UUID }}
     POSTMAN_ENVIRONMENT_UID: ${{ secrets.POSTMAN_ENVIRONMENT_GITHUB_PROD }}
     
 jobs:
