--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test Automation with GitHub API",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "owner_repo_test": ""
   },
   "repository": {
     "type": "git",
